 otherwise some cells disappear on taps.
 - changed closed tdb already closed to log instead of warning
 - changed voTextBox historyArray to correctly break lines and present
 correct historical set

11 march 2012
 - started make choice csv imp/exp work with text vals, create new as
 needed

12 march 2012
 - continue on csv load choice by text string not value

13 march 2012
 - completed choice as text string to/from csv
   - save and load appropriate text strings
   - create new optDict entries on load if string not matched
   - correctly insert new val into intervening blank space in dict if
   avail
 - fix dot appearing on graph for text='' 
 - fixed background not clear on utc
   -- but bad table cell labels on return from graph with selected date.

14 march 2012
 - fixed problem with cell labels needing redraw by adding additional
 [updatetrackertableview]s in viewWillAppear (to set controls
 correctly so next not noticed) and viewDidAppear (to update labels)
 - utc now disappears in ios5 if app regains active and tracker is
 private
 - clear privacy setting on open/close privacy view in < 0.6 sec

19 march 2012
 - make more space around privacy button
 - fix finishProgressBar not working for <5.0 - don't use performSelectorOnMainThread
 - update Default png views

20 march 2012
 - disallow setting tracker/value privacy to < privdflt

24 march 2012
 - rectify various issues around 'null'/"" choice entries save to /
 read from csv files after change above for choice val as text in csv

--- commit ---

 - trim \n or \r from textbox data when writing csv file

25 march 2012
 - change message for fn config page to 'not configured yet' instead
 of 'vid 0 not found' (source was tracker voGetNameForVID)
 - loadFnArray skip if db entry is "" (was inserting 0 causing problem above)
 - disallow fn to choose self for vo to compute on
 - fix set choice vcolor to not -1 in btnSave for addValObjcontroller
 - submit as 1.0.5

--- commit ---
